--- a/facts.html
+++ b/facts.html
@@ -24,11 +24,11 @@
                 <li class="nav-item nav-padding-lg">
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
-                <li class="nav-item nav-padding-lg nav--active active">
-                    <a class="nav-link" href="benefits.html">Benefits <span class="sr-only">(current)</span></a>
-                </li>
                 <li class="nav-item nav-padding-lg">
-                    <a class="nav-link" href="facts.html">Facts</a>
+                    <a class="nav-link" href="benefits.html">Benefits</a>
+                </li>
+                <li class="nav-item nav-padding-lg nav--active active">
+                    <a class="nav-link" href="facts.html">Facts <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item nav-padding-lg">
                     <a class="nav-link" href="experience.html">Experience</a>
@@ -55,9 +55,9 @@
             <div class="col-12">
                 <div class="row justify-content-start">
                     <div class="col-12 col-md-5">
-                        <blockquote class="blockquote text-right">
+                        <blockquote class="blockquote text-left quote">
                             <p class="mb-0">(Mindfulness is) paying attention in a particular way: on purpose, in the present moment and non-judgmentally</p>
-                            <footer class="blockquote-footer">John Kabat Zinn, scientist, in <br><cite title="Full Catastrophe Living">Full Catastrophe Living</cite></footer>
+                            <footer class="blockquote-footer quote">John Kabat Zinn, scientist, in <br><cite title="Full Catastrophe Living">Full Catastrophe Living</cite></footer>
                         </blockquote>
                     </div>
                 </div>
@@ -71,9 +71,9 @@
         <section class="container-fluid container-wide container-second-section-benefits container--padding300--bottom-sm-middle-md container-callout-light">
             <div class="row justify-content-end container--translucentgradientleft container--topbottom20">
                 <div class="col-md-4 offset-md-8">
-                    <blockquote class="blockquote text-right">
+                    <blockquote class="blockquote text-right quote">
                         <p class="mb-0">(Mindfulness) helps you step back and look at that thought as just a thought, as opposed to a reality</p>
-                        <footer class="blockquote-footer">Dr Allison Baker in <br><cite title="Child Mind Institute">Child Mind Institute</cite></footer>
+                        <footer class="blockquote-footer quote">Dr Allison Baker in <br><cite title="Child Mind Institute">Child Mind Institute</cite></footer>
                     </blockquote>
                 </div>
             </div>
@@ -85,7 +85,9 @@
                 <div class="col-12">
                     <div class="row justify-content-start">
                         <div class="col-12 col-md-5">
-                            <h1>Download Research</h1>
+                            <a href="#" target="blank">
+                            <h1><i class="fas fa-file-download downloadicon"></i> Download Research</h1>
+                            </a>
                         </div>
                     </div>
                 </div>
