--- a/classes.html
+++ b/classes.html
@@ -59,16 +59,16 @@
     <main>
         <!-- Secondary Level Container -2- Benefits section-->
         <section class="container-fluid container-first-section container--top300 container-callout-dark">
-            <div class="row container-wide justify-content-center align-items-center container--translucent container--topbottom20">
-                <div class="col-12 col-md-6 col-lg-12 text-center">
+            <div class="row container-wide justify-content-center align-items-start container--translucent container--topbottom20">
+                <div class="col-12 text-center">
                     <h2>Classes in Holmfirth, West Yorkshire</h2>
                 </div>
-                <div class="col-md-6 col-lg-4 text-center container--topbottom20">
+                <div class="col-md-4 text-center container--topbottom20">
                     <i class="far fa-calendar-alt iconsizing" aria-hidden="true"></i>
                     <span class="sr-only">Dates</span>
                     <p>Every Monday and Wednesday</p>
                 </div>
-                <div class="col-lg-4 text-center d-none d-lg-block">
+                <div class="col-md-4 text-center container--topbottom20">
                     <i class="far fa-clock iconsizing" aria-hidden="true"></i>
                     <span class="sr-only">Times</span>
                     <ul class="list-group">
@@ -76,8 +76,15 @@
                     <li class="list-group-item">4.30pm - 5.30pm (Age 9-11)</li>
                     </ul>
                 </div>
-                <div class="col-lg-4 text-center d-none d-lg-block">
-                    map
+                <div class="col-md-4 text-center container--topbottom20">
+                    <i class="fas fa-map-marker-alt iconsizing" aria-hidden="true"></i>
+                    <span class="sr-only">Location</span>
+                    <p>Calm Little Stars,<br>
+                    Lower Ground Floor,<br>
+                    41 Huddersfield Road,<br>
+                    Holmfirth<br>
+                    HD9 3JH</p>
+                    
                 </div>
             </div>
         </section>
